--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Hello World</h1>
+<h1 class="h1-title">Hello World</h1>
 <button id="my-button">my-button</button>
+<button id="add-data">add-data</button>
+<textarea name="notes" id="notes" cols="30" rows="10"></textarea>
+<ul>
+
+</ul>
 <script src="script.js"></script>
 </body>
 </html>
