--- a/week3/index3.html
+++ b/week3/index3.html
@@ -9,7 +9,29 @@
 
 </head>
 <body>
+    <table>
+        <thead>
+            <tr>
+                <th scope="col">Municipality</th>
+            </tr>
+            <tr>
+                <th scope="col">Population</th>
+            </tr>
+            <tr>
+                <th scope="col">Employment</th>
+            </tr>
+            <tr>
+                <th scope="col">Employment%</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">Pizdec</th>
+            </tr>
+        </tbody>
+    </table>
     
+       
 <script src="script3.js"></script>
 </body>
 </html>
