--- a/week3/index3.html
+++ b/week3/index3.html
@@ -9,21 +9,24 @@
 
 </head>
 <body>
-    <table>
+    <table class="table">
         <thead>
-            <tr>
-                <th scope="col">Municipality</th>
-            </tr>
-            <tr>
-                <th scope="col">Population</th>
-            </tr>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+          </tr>
         </thead>
         <tbody>
-            <tr>
-                <th scope="row">Pizdec</th>
-            </tr>
+          <tr>
+
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
         </tbody>
-    </table>
+      </table>
     
        
 <script src="script3.js"></script>
