--- a/week3/index3.html
+++ b/week3/index3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,27 +9,28 @@
     <title>Week3</title>
 
 </head>
-<body>
-    <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
 
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-        </tbody>
-      </table>
-    
-       
-<script src="script3.js"></script>
+<body>
+    <div class="center">
+        <h1>Municipality employment statistics in Finland</h1>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Municipally</th>
+                    <th>Population</th>
+                    <th>Employment</th>
+                    <th>Employment-%</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <script src="script3.js"></script>
 </body>
+
 </html>
