--- a/week3/index3.html
+++ b/week3/index3.html
@@ -22,7 +22,7 @@
                     <th>Employment-%</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="data">
                 
             </tbody>
         </table>
