--- a/misha/index.html
+++ b/misha/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frappe</title>
-    <script src="application.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/frappe-charts@1.2.4/dist/frappe-charts.min.iife.js"></script>
+    <title>Document</title>
 </head>
-
 <body>
-    <div id="chart"></div>
+    nav.dashboard
 </body>
-
 </html>
