--- a/week6/index6.html
+++ b/week6/index6.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style6.css">
+    <script src="https://unpkg.com/frappe-charts@latest"></script>
     <title>Week6</title>
 
 </head>
