--- a/project/index.html
+++ b/project/index.html
@@ -6,12 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Project</title>
+    <title>My statistical portal</title>
 </head>
 
 <body>
-
+    <div class="title">
+        <h1>My first statistical portal about the demographic situation in Finland </h1>
+    </div>
+    <div class="plots">
+        <canvas id="canvas" width="710" height="300"></canvas>
+        <canvas id="canvas1" width="710" height="300"></canvas>
+        <canvas id="cvs" width="710" height="300"></canvas>
+        <canvas id="cvs1" width="710" height="300"></canvas>
+    </div>
+    <script src="canvas.js" defer></script>
     <script src="script.js" defer></script>
+
 </body>
 
 </html>
