--- a/week2/index2.html
+++ b/week2/index2.html
@@ -54,7 +54,7 @@
         <div>Input-address</div>
         <input type="address" name="address" required="required">
         <div>Input-admin</div>
-        <input type="admiin" name="admin" required="required">
+        <input type="admin" name="admin" required="required">
         <input type="submit" name="submit_btn" value="Submit-data">
         <button type="reset">Empty-table</button>
     </form>
@@ -62,3 +62,7 @@
 
 
 </html>
+
+<!-- let email = [...] 
+    email.push(input.value)
+-->
